(style): Change error message width Change date selector error message width to accommodate messages with two different lengths Add max-width to date selector error message and date input error message to prevent possible future overflow out of form

--- a/react_form_next/src/app/components/date_input/DateInput.module.scss
+++ b/react_form_next/src/app/components/date_input/DateInput.module.scss
@@ -29,4 +29,5 @@ $border-settings: 1px solid lightgray;
     left: -4em;
     top: 4.75em;
     width: 17em;
+    max-width: 30em;
 }
