--- a/react_form_next/src/app/components/date_selector/DateSelector.module.scss
+++ b/react_form_next/src/app/components/date_selector/DateSelector.module.scss
@@ -25,7 +25,8 @@ $border-settings: 1px solid lightgray;
 .dateSelectorErrorMsg {
     position: absolute;
     font-size: 0.75rem;
-    left: -2.5em;
+    text-align: center;
+    left: -4em;
     top: 4.75em;
-    width: max-content;
+    width: 18em;
 }
